[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_africa_inactive.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_asia_active.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_antartica_inactive.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_southamerica_active.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_northamercia_active.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_australia_active.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_southamerica_inactive.png" type="Texture" id=8]
[ext_resource path="res://src/scenes/modules/core/ModuleWindow.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_fail.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/Window/module-power/window_space_gauge_full.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_africa_active.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_australia_inactive.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_northamercia_inactive.png" type="Texture" id=14]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_europe_active.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_antartica_active.png" type="Texture" id=16]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_asia_inactive.png" type="Texture" id=17]
[ext_resource path="res://assets/textures/Window/module-power/window_space_gauge.png" type="Texture" id=18]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_success.png" type="Texture" id=19]
[ext_resource path="res://assets/textures/Window/module-power/windowbutton_space_continent_europe_inactive.png" type="Texture" id=21]
[ext_resource path="res://assets/fonts/72/GOTHICI-72.tres" type="DynamicFont" id=22]
[ext_resource path="res://src/scripts/modules/ModulePower.gd" type="Script" id=23]


[sub_resource type="InputEventKey" id=1]
pressed = true
scancode = 32

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="SpaceMashGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" parent="." instance=ExtResource( 9 )]
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 400, 300 )

[node name="PowerFrom" type="GridContainer" parent="Window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.0
margin_top = -101.0
margin_right = -215.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 66, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromAfrica" type="TextureButton" parent="Window/PowerFrom"]
margin_right = 132.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromAntartica" type="TextureButton" parent="Window/PowerFrom"]
margin_top = 29.0
margin_right = 132.0
margin_bottom = 54.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromAsia" type="TextureButton" parent="Window/PowerFrom"]
margin_top = 58.0
margin_right = 132.0
margin_bottom = 83.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromAustralia" type="TextureButton" parent="Window/PowerFrom"]
margin_top = 87.0
margin_right = 132.0
margin_bottom = 112.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromEurope" type="TextureButton" parent="Window/PowerFrom"]
margin_top = 116.0
margin_right = 132.0
margin_bottom = 141.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromNorthAmerica" type="TextureButton" parent="Window/PowerFrom"]
margin_top = 145.0
margin_right = 132.0
margin_bottom = 170.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromSouthAmerica" type="TextureButton" parent="Window/PowerFrom"]
margin_top = 174.0
margin_right = 132.0
margin_bottom = 199.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerTo" type="GridContainer" parent="Window"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -100.0
margin_right = -53.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 66, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToAfrica" type="TextureButton" parent="Window/PowerTo"]
margin_right = 132.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToAntartica" type="TextureButton" parent="Window/PowerTo"]
margin_top = 29.0
margin_right = 132.0
margin_bottom = 54.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToAsia" type="TextureButton" parent="Window/PowerTo"]
margin_top = 58.0
margin_right = 132.0
margin_bottom = 83.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToAustralia" type="TextureButton" parent="Window/PowerTo"]
margin_top = 87.0
margin_right = 132.0
margin_bottom = 112.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToEurope" type="TextureButton" parent="Window/PowerTo"]
margin_top = 116.0
margin_right = 132.0
margin_bottom = 141.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToNorthAmerica" type="TextureButton" parent="Window/PowerTo"]
margin_top = 145.0
margin_right = 132.0
margin_bottom = 170.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToSouthAmerica" type="TextureButton" parent="Window/PowerTo"]
margin_top = 174.0
margin_right = 132.0
margin_bottom = 199.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLevel" type="TextureProgress" parent="Window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -176.5
margin_right = 176.5
margin_bottom = 176.5
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 176, 176 )
value = 45.0
rounded = true
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 11 )
fill_mode = 4
radial_initial_angle = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerPercentage" type="Label" parent="Window/PowerLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.686
margin_top = -44.789
margin_right = 89.314
margin_bottom = 44.211
rect_pivot_offset = Vector2( 68, 45 )
custom_fonts/font = ExtResource( 22 )
text = "+45%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDivertPower" type="TextureButton" parent="Window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = 195.0
margin_right = 182.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 181.5, 35 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Window/PowerFrom/FromAfrica" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerFrom/FromAntartica" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerFrom/FromAsia" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerFrom/FromAustralia" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerFrom/FromEurope" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerFrom/FromNorthAmerica" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerFrom/FromSouthAmerica" to="." method="_power_from_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToAfrica" to="." method="_power_to_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToAntartica" to="." method="_power_to_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToAsia" to="." method="_power_to_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToAustralia" to="." method="_power_to_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToEurope" to="." method="_power_to_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToNorthAmerica" to="." method="_power_to_toggler"]
[connection signal="toggled" from="Window/PowerTo/ToSouthAmerica" to="." method="_power_to_toggler"]
[connection signal="pressed" from="Window/ButtonDivertPower" to="." method="_on_ButtonDivertPower_pressed"]
